<resources>
    <string name="app_name">APN - Eventos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    // String del Login
    <string name="accion_login">Iniciar Sesión</string>
    <string name="accion_registrarse">Registrarse</string>
    <string name="accion_salir">Salir</string>
    <string name="accion_continuar">Ingresar</string>

    // String del Inicio
    <string name="titulo_bienvenida">Bienvenido al:</string>

    <string name="accion_agenda">Agenda</string>
    <string name="accion_grupo">Grupo de WhatsApp</string>
    <string name="accion_expositores">Expositores</string>
    <string name="accion_informacion">Información</string>
    <string name="accion_descargas">Descargas</string>

    // String de Agenda
    <string name="label_agenda">Agenda</string>

    // String de Expositores
    <string name="label_expositores">Expositores</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDjo_Te6yZ1oYZJIjcAq1cw4RBDluRrO_Q
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa">Map</string>
</resources>
