<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment"
    android:fillViewport="true"
    android:background="@drawable/img_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="415dp"
            android:layout_height="117dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_corner"
            android:fontFamily="@font/autor_bold"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/button_inicio_padding_start"
            android:text="@string/accion_login"
            android:textColor="@color/redPeru"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo" />

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_corner"
            android:fontFamily="@font/autor_bold"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/button_inicio_padding_start"
            android:text="@string/accion_registrarse"
            android:textColor="@color/redPeru"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <Button
            android:id="@+id/btn_salir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_corner"
            android:fontFamily="@font/autor_bold"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/button_inicio_padding_start"
            android:text="@string/accion_salir"
            android:textColor="@color/redPeru"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_registrarse" />

        <Button
            android:id="@+id/btn_continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_corner_custom"
            android:drawableTint="@color/redPeru"
            android:fontFamily="@font/autor_bold"
            android:paddingStart="@dimen/button_inicio_padding_start"
            android:paddingEnd="@dimen/button_inicio_padding_start"
            android:text="@string/accion_continuar"
            android:textColor="@color/redPeru"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>